ecmascript/parser/tests/typescript-errors/tsc/es6/destructuring/objectBindingPatternKeywordIdentifiers03/input.ts.stderr
error[1005]: Expected ','
 --> $DIR/tests/typescript-errors/tsc/es6/destructuring/objectBindingPatternKeywordIdentifiers03/input.ts:2:15
  |
2 | var { "while" } = { while: 1 }
  |               ^

